# lawflo

./: null
.claude/: launch.json
.github/workflows/: ci.yml
LawFlow/: .gitignore  README_FOR_FRIENDS.txt  SETUP.md  requirements.txt  run.bat  start.bat
LawFlow/.claude/: launch.json
LawFlow/api/: app.py  config.py  errors.py
LawFlow/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ZOOSH_ECU-main/: CAPTURED_KEYS.txt  KEY_USAGE_GUIDE.md  KeyExtractor.bat  KeyExtractorGUI.pyw  PROGRESS_SUMMARY.md  README.md  blowfish_tool.py  dynojet_keys.py  extract_key.js  run_extractor.bat  run_extractor.ps1  serial_monitor.py
ZOOSH_ECU-main/ECUTool/: ECUTool.bat  README.md  __init__.py  can_interface.py  ecu_gui.py  ecu_protocol.py  ecu_tool.py  flash_ecu.py  powercore_bridge.py  powervision_interface.py  powervision_serial.py  requirements.txt
ZOOSH_ECU-main/HarleyECUDump/: HarleyECUPro.bat  HarleyECUTool.bat  MEMORY_MAP.md  README.md  analyze_memory_map.py  capture_20251226_210415.txt  capture_20251226_220402.txt  capture_write.py  ecu_flash.py  ecu_flash_safe.py  ecu_flash_ultimate.py  ecu_write.py  extract_tune.py  harley_dump_ui.py  harley_ecu_config.json  harley_ecu_dump.py  harley_ecu_gui.py  run_dump.bat  (+7 more)
frameweaver/: .gitignore  CLAUDE.md  README.md  detelecine-plan-v2.md  pyproject.toml
frameweaver/frameweaver/: __init__.py  cli.py
frameweaver/frameweaver/analysis/: __init__.py  cadence.py  classifier.py  extractor.py
frameweaver/frameweaver/utils/: __init__.py  ffmpeg.py
frameweaver/tests/: test_analysis.py
(+99 files in other folders)
