[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frameweaver"
version = "0.1.0"
description = "AI-powered inverse telecine and deinterlace detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Thunderhorse Tuning"}
]

dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "scipy>=1.11",
    "tqdm>=4.65",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.1",
]
gui = [
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
frameweaver = "frameweaver.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["frameweaver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
